syntax = "proto3";

package hello.v1;

// By convention, set the go_package to your module path, plus the import path.
// For example, if your module is github.com/example/myrepo:
option go_package = "github.com/luthersystems/svc/oracle/testservice/gen/go/hello/v1;hellov1";

import "google/api/annotations.proto"; 
import "google/protobuf/empty.proto";

// HelloService is a simple greeting service.
service HelloService {
  // SayHello echoes a greeting for the provided name.
  rpc SayHello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/v1/hello"
      body: "*"
    };
  }

  // Ping is just a trivial endpoint returning an empty response.
  rpc Ping (google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/v1/ping"
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greeting = 1;
}
